# filelister

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
filelister/: .Filelist.py.swp  .pylintrc  DataStorage.py  Filelist.py  __init__.py  compression.py  empty_class.py  normalize_path.py  read_filelist.py  testlist.txt
filelister.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: compressed_write.zz  compression_benchmark.py  test_data_storage.py  test_filelist_basic.py  test_filelist_loader.py  test_filelister.py  uncompressed_write.txt
tests/benchmarks/: append_benchmark.py  compression_benchmark.py  read_write_benchmark.py
tests/filelists/: abs_filelist_c.txt  abs_filelist_s.txt  compressed_abs.txt  compressed_rel.txt  full_filelist_rel.txt  full_filelist_rel_compressed.zz  rel_filelist.txt  test_compressed_abs.txt  test_filelist.txt  test_filelist_abs.txt  test_filelist_rel.txt
tests/old_filelsits/: filelist.csv
