[tool.poetry]
name = "filelister"
version = "0.0.0"
description = "Filelister is a Python package that makes working with filelists (yes, lists of files) easy."
authors = ["NaN Developers <nanwtf@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^1.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
tqdm = "^4.64.0"


[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
